--- a/BMICALCULATOR/BMICALCULATOR/View/Base.lproj/Main.storyboard
+++ b/BMICALCULATOR/BMICALCULATOR/View/Base.lproj/Main.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Calculate View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BMICALCULATOR" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="CalculateViewController" customModule="BMICALCULATOR" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -48,11 +48,14 @@
                                             <constraint firstAttribute="height" constant="21" id="mbP-Sp-Wsl"/>
                                         </constraints>
                                     </stackView>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="8qY-Mb-Imf">
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="2" minValue="1" maxValue="3" translatesAutoresizingMaskIntoConstraints="NO" id="8qY-Mb-Imf">
                                         <rect key="frame" x="-2" y="567" width="377" height="61"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="mVF-3u-Icw"/>
                                         </constraints>
+                                        <connections>
+                                            <action selector="HeightChangePressed:" destination="BYZ-38-t0r" eventType="valueChanged" id="4zb-sz-LwU"/>
+                                        </connections>
                                     </slider>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="fug-kM-wtU">
                                         <rect key="frame" x="0.0" y="627" width="373" height="21"/>
@@ -74,11 +77,14 @@
                                             <constraint firstAttribute="height" constant="21" id="saz-ej-UDz"/>
                                         </constraints>
                                     </stackView>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="NKs-RJ-pKG">
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="60" minValue="0.0" maxValue="150" translatesAutoresizingMaskIntoConstraints="NO" id="NKs-RJ-pKG">
                                         <rect key="frame" x="-2" y="648" width="377" height="61"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="JRF-1O-Ycv"/>
                                         </constraints>
+                                        <connections>
+                                            <action selector="WeightChangePressed:" destination="BYZ-38-t0r" eventType="valueChanged" id="ucf-EK-EMc"/>
+                                        </connections>
                                     </slider>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bUZ-KI-79J">
                                         <rect key="frame" x="0.0" y="708" width="373" height="51"/>
@@ -91,6 +97,9 @@
                                         <state key="normal" title="CALCULATE">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="calculatePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mL2-og-HdN"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -108,16 +117,101 @@
                             <constraint firstItem="u3k-HF-gW1" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="rCv-xi-u2N"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="WeightSlider" destination="NKs-RJ-pKG" id="uaV-ad-R5K"/>
+                        <outlet property="heightSlider" destination="8qY-Mb-Imf" id="U1H-wV-vVb"/>
+                        <outlet property="heightText" destination="ce8-IL-Nmy" id="tsu-5q-qhH"/>
+                        <outlet property="weightText" destination="bb1-bC-KuA" id="ppD-WS-nYy"/>
+                        <segue destination="dLz-2j-sK8" kind="presentation" identifier="goToResult" id="LjT-f8-SYE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="46.564885496183201" y="-2.1126760563380285"/>
         </scene>
+        <!--Result View Controller-->
+        <scene sceneID="gaM-b3-F17">
+            <objects>
+                <viewController id="dLz-2j-sK8" customClass="ResultViewController" customModule="BMICALCULATOR" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="oIS-Ps-FXo">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="result_background" translatesAutoresizingMaskIntoConstraints="NO" id="X3W-jV-c6a">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
+                                <color key="backgroundColor" systemColor="systemBlueColor"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="B8n-RJ-aQY">
+                                <rect key="frame" x="76" y="313.66666666666669" width="241" height="155.66666666666669"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOUR RESULT" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7zD-7U-Mw2">
+                                        <rect key="frame" x="0.0" y="0.0" width="241" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="19.5" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sGI-76-GOD">
+                                        <rect key="frame" x="0.0" y="36.000000000000007" width="241" height="95.666666666666686"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="80"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EAT SOME MORE SNACKS!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NtC-W8-rZH">
+                                        <rect key="frame" x="0.0" y="131.66666666666663" width="241" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8K9-yq-2kY">
+                                <rect key="frame" x="0.0" y="732" width="393" height="51"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="51" id="ZEA-wA-TSt"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="RECALCULATE">
+                                    <color key="titleColor" red="0.8980392157" green="0.72156862749999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="reCalculateButton:" destination="dLz-2j-sK8" eventType="touchUpInside" id="HAT-3u-jIu"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="VQz-zM-Ipb"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="B8n-RJ-aQY" firstAttribute="centerY" secondItem="oIS-Ps-FXo" secondAttribute="centerY" id="2dv-m7-bS7"/>
+                            <constraint firstItem="X3W-jV-c6a" firstAttribute="top" secondItem="oIS-Ps-FXo" secondAttribute="top" id="9re-d7-vHq"/>
+                            <constraint firstAttribute="bottom" secondItem="X3W-jV-c6a" secondAttribute="bottom" id="Cpa-to-man"/>
+                            <constraint firstItem="X3W-jV-c6a" firstAttribute="leading" secondItem="VQz-zM-Ipb" secondAttribute="leading" id="GVO-ir-iH4"/>
+                            <constraint firstItem="X3W-jV-c6a" firstAttribute="trailing" secondItem="VQz-zM-Ipb" secondAttribute="trailing" id="PZ7-6W-e5g"/>
+                            <constraint firstItem="VQz-zM-Ipb" firstAttribute="trailing" secondItem="8K9-yq-2kY" secondAttribute="trailing" id="RZU-Gl-aI7"/>
+                            <constraint firstItem="B8n-RJ-aQY" firstAttribute="centerX" secondItem="oIS-Ps-FXo" secondAttribute="centerX" id="fqf-IV-JKU"/>
+                            <constraint firstItem="8K9-yq-2kY" firstAttribute="bottom" secondItem="VQz-zM-Ipb" secondAttribute="bottom" id="mkO-P2-2xf"/>
+                            <constraint firstItem="8K9-yq-2kY" firstAttribute="leading" secondItem="VQz-zM-Ipb" secondAttribute="leading" id="ob8-C5-4Vc"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="bmiResult" destination="sGI-76-GOD" id="d08-e1-eC4"/>
+                        <outlet property="bmiResultSentence" destination="NtC-W8-rZH" id="z4P-7f-RaC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="m6M-Mq-yFv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="779.38931297709917" y="-2.1126760563380285"/>
+        </scene>
     </scenes>
     <resources>
         <image name="calculate_background" width="375" height="812"/>
+        <image name="result_background" width="375" height="812"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemIndigoColor">
             <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
